test/sema/unary.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo(): unit {}

fn main(): unit {
    // CHECK: [[# @LINE + 1 ]]:9: error: expected 'bool' operand
    !foo();

    // CHECK: [[# @LINE + 1 ]]:9: error: expected 'number' operand
    -foo();
}
